feat: Mark numerous core Java and JVM topics as complete, add new advanced core Java guides, and detail Shenandoah GC.